# consul-kv-trigger

./: .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
examples/: log.rs
src/: lib.rs
