[package]
name = "consul-kv-trigger"
description = "Watch Consul KV and act on changes"
version = "0.1.0"
edition = "2021"
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
consul = "0.4.2"
thiserror = "1.0.31"
tracing = "0.1.34"

[dev-dependencies]
clap = { version = "3.2.14", features = ["derive"] }
eyre = "0.6.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
